@@ -92,6 +92,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.11</version>
+                <configuration>
+                    <excludes>
+                        <!-- Exclude Mockito generated classes -->
+                        <exclude>**/*$MockitoMock*</exclude>
+                        <exclude>**/*Mock*</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -127,7 +134,6 @@
                     <xmlOutput>true</xmlOutput>
                     <htmlOutput>true</htmlOutput>
                     <fork>true</fork>
-                    <jvmArgs>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArgs>
                     <plugins>
                         <plugin>
                             <groupId>com.h3xstream.findsecbugs</groupId>
